--- a/que1.html
+++ b/que1.html
@@ -1,4 +1,6 @@
-<!-- Create a basic HTML5 page with a title, heading, paragraph, and an image. -->
+<!-- Q1:Create a basic HTML5 page with a title, heading, paragraph, and an image. -->
+<!-- Q2:Add a form with input fields for name and email, and a submit button to the page you created. -->
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -11,5 +13,16 @@
     <h1>Cipher Schools</h1>
     <p>I am a learning Full Stack Web Development from Cipher Schools.</p>
     <img src="image.png" alt="" width="300" height="100">
+    <hr>
+    <h2>Sign Up</h2>
+    <form>
+        <label for="name">Name: </label>
+        <input type="text" id="name" name="name" required> <br><br>
+
+        <label for="email">Email: </label>
+        <input type="text" id="email" name="email" required> 
+
+        <input type="submit" value="Submit">
+    </form>
 </body>
 </html>
