--- a/que1.html
+++ b/que1.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cipher Schools Q1</title>
+    <title>Cipher Schools</title>
 </head>
 <body>
     <h1>Cipher Schools</h1>
