--- a/ques3.html
+++ b/ques3.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cipher Schools Q1</title>
+    <title>Cipher Schools</title>
     <style>
         body{
             background-color:antiquewhite;
